--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/hesti.png" rel="icon">
+  <!-- <link href="assets/img/hesti.png" rel="icon"> -->
   <link href="assets/img/hesti.png" rel="apple-touch-icon">
 
   <!-- Fonts -->
@@ -68,9 +68,10 @@
             <h2>Hesti Nurhayati</h2>
             <p>I'm <span class="typed" data-typed-items="Front-End Developer, Dokumentator Projek ">Front-End Developer</span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span></p>
             <div class="social-links">
-              <a href="#"><i class="bi bi-github"></i></a>
-              <a href="#"><i class="bi bi-instagram"></i></a>
-              <a href="#"><i class="bi bi-linkedin"></i></a>
+              <a href="https://github.com/HestiNhy13"><i class="bi bi-github"></i></a>
+              <a href="https://wa.me/qr/IC5L6WD3UPVPE1"><i class="bi bi-whatsapp"></i></a>
+              <a href="https://www.instagram.com/rhyaaa4_?igsh=ZGUzMzM3NWJiOQ=="><i class="bi bi-instagram"></i></a>
+              <a href="https://www.linkedin.com/in/hesti-nurhayati-100009362?trk=contact-info"><i class="bi bi-linkedin"></i></a>
             </div>
           </div>
         </div>
@@ -83,37 +84,33 @@
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <h2>About</h2>
-        <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+        <h2>Tentang </h2>
+        <!-- <p>Saya Seorang mahasiswi Politeknik Negeri Jember jurusan D-4 Teknik Informatika. Saya memiliki semangat yang besar untuk belajar dan terus meningkatkan diri, baik di dalam maupun di luar lingkungan akademis. Saya memiliki minat yang kuat dalam hal-hal baru dan selalu berusaha untuk mencapai hasil terbaik. Saya memiliki kemampuan yang baik dalam membangun hubungan yang positif dengan orang lain, memungkinkan saya untuk bekerja secara efektif dalam tim.</p> -->
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
 
         <div class="row gy-4 justify-content-center">
           <div class="col-lg-4">
-            <img src="assets/img/profile-img.jpg" class="img-fluid" alt="">
+            <img src="assets/img/hesti2.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 content">
-            <h2>UI/UX Designer &amp; Web Developer.</h2>
+            <h2>Front-End Developer</h2>
             <p class="fst-italic py-3">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-              magna aliqua.
+              Saya Seorang mahasiswi Politeknik Negeri Jember jurusan D-4 Teknik Informatika. Saya memiliki semangat yang besar untuk belajar dan terus meningkatkan diri, baik di dalam maupun di luar lingkungan akademis. Saya memiliki minat yang kuat dalam hal-hal baru dan selalu berusaha untuk mencapai hasil terbaik. Saya memiliki kemampuan yang baik dalam membangun hubungan yang positif dengan orang lain, memungkinkan saya untuk bekerja secara efektif dalam tim.
             </p>
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>1 May 1995</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.example.com</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+123 456 7890</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>New York, USA</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Tanggal Lahir : </strong> <span>13 April 2005</span></li>
+                  
+                  <li><i class="bi bi-chevron-right"></i> <strong>Alamat : </strong> <span>Kecamatan Pace, Nganjuk</span></li>
                 </ul>
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>30</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Master</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>email@example.com</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>No Telepon : </strong> <span>No Telepon : </span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Email : </strong> <span>hestinurhayati0405@gmail.com</span></li>
                 </ul>
               </div>
             </div>
