--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
             </div><!-- End Portfolio Item -->
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-product">
-              <img src="assets/img/masonry-portfolio/masonry-portfolio-2.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/blk2.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Website 1</h4>
                 <p>PelatihanKu</p>
