--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <li><a href="#about"><i class="bi bi-person navicon"></i><span>Tentang Saya</span></a></li>
         <li><a href="#resume"><i class="bi bi-file-earmark-text navicon"></i><span>Resume</span></a></li>
         <li><a href="#portfolio"><i class="bi bi-images navicon"></i><span>Projek</span></a></li>
-        <li><a href="#services"><i class="bi bi-hdd-stack navicon"></i><span>Services</span></a></li>
+        <!-- <li><a href="#services"><i class="bi bi-hdd-stack navicon"></i><span>Services</span></a></li> -->
         <li><a href="#contact"><i class="bi bi-envelope navicon"></i><span>Kontak</span></a></li>
       </ul>
     </nav>
@@ -332,24 +332,24 @@
               </div>
             </div><!-- End Portfolio Item -->
 
+            <!-- <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-branding">
+              <img src="assets/img/portfolio/blk3.png" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Website 2</h4>
+                <p>PelatihanKu</p>
+                <a href="assets/img/portfolio/blk3.png" title="Product 2" data-gallery="portfolio-gallery-branding  class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                <!-- <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a> -->
+              </div> -->
+            </div><!-- End Portfolio Item -->
+
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-branding">
               <img src="assets/img/portfolio/blk3.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Website 2</h4>
                 <p>PelatihanKu</p>
-                <a href="assets/img/portfolio/blk3.png" title="Product 2" data-gallery="portfolio-gallery-branding class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                <a href="assets/img/portfolio/blk3.png" title="Branding 2" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                 <!-- <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a> -->
               </div>
-            </div><!-- End Portfolio Item -->
-
-            <!-- <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-branding">
-              <img src="assets/img/masonry-portfolio/masonry-portfolio-6.jpg" class="img-fluid" alt="">
-              <div class="portfolio-info">
-                <h4>Branding 2</h4>
-                <p>Lorem ipsum, dolor sit</p>
-                <a href="assets/img/masonry-portfolio/masonry-portfolio-6.jpg" title="Branding 2" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
-              </div> -->
             </div><!-- End Portfolio Item -->
 
             <!-- <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
