--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <!-- Hero Section -->
     <section id="hero" class="hero section light-background">
 
-      <!-- <img src="assets/img/hd1.jpg" alt=""> -->
+      <img src="assets/img/bg1.jpeg" alt="">
 
       <div class="container" data-aos="zoom-out">
         <div class="row justify-content-center">
